Add german translation and fully integrate it in Android

--- a/core/src/main/resources/StringsBundle.properties
+++ b/core/src/main/resources/StringsBundle.properties
@@ -1,13 +1,13 @@
 log_in_title = Log In
-logging_in = Logging in...
-could_not_log_in = Could not log in!
+logging_in = Logging in…
+could_not_log_in = Could not log in\!
 verify_credentials = Please verify your RoboVM account credentials and try again
 ok = OK
 your_basket_title = Your Basket
 checkout = Checkout
 processing_title = Processing
-order_placed = Your order has been placed!
-unexpected_error = An unexpected error occurred! Please try again later!
+order_placed = Your order has been placed\!
+unexpected_error = An unexpected error occurred\! Please try again later\!
 first_name_required = First name is required
 last_name_required = Last name is required
 address_required = Address is required
@@ -16,14 +16,14 @@ zip_code_required = ZIP code is required
 phone_number_required = Phone number is required
 country_required = Country is required
 error = Error
-tweet_text = I just built a native iOS app with Java using #RoboVM and all I got was this free T-shirt!
+tweet_text = I just built a native iOS app with Java using \#RoboVM and all I got was this free T-shirt\!
 try_again = Try Again
-processing_order = Processing Order...
+processing_order = Processing Order…
 order_complete = Order Complete
 order_received = We've received your order and we'll email you as soon as your items ship.
 brag_twitter = Brag on Twitter
 done = Done
-please_wait = Please wait...
+please_wait = Please wait…
 placing_order = Placing Order
 add_to_basket = Add to Basket
 size = Size
@@ -31,6 +31,7 @@ color = Color
 free = Free
 products_list_title = RoboVM Store
 shipping_title = Shipping
+shipping_information = Shipping information
 first_name = First Name
 last_name = Last Name
 phone_number = Phone Number
@@ -42,3 +43,9 @@ select_country = Select your Country
 state = State
 select_state = Select your state
 place_order = Place Order
+street_adress_1 = Street Address 1
+street_adress_2 = Street Address 2
+basket_empty = Your basket is empty
+go_add_something = Go back and add something there.
+brag_to_friends = Brag to Friends
+explanation_text = A small task is required to get your free shirt.\nPlease add your RoboVM account email address to LoginFragment.java then revisit this screen.
