Remove SwipableListItem, instead use a contextual action bar, highlight selected items

--- a/core/src/main/resources/StringsBundle.properties
+++ b/core/src/main/resources/StringsBundle.properties
@@ -49,3 +49,4 @@ basket_empty = Your basket is empty
 go_add_something = Go back and add something there.
 brag_to_friends = Brag to Friends
 explanation_text = A small task is required to get your free shirt.\nPlease add your RoboVM account email address to LoginFragment.java then revisit this screen.
+selected = selected
